--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.http.encoding.force=true
 spring.messages.encoding=UTF-8
 spring.http.encoding.force-response=true
 
+logging.file=./log.log
+logging.level.com.zzitbar.quartzcluster.mapper=debug
+
 # freemarker
 spring.freemarker.allow-request-override=false
 spring.freemarker.cache=true
@@ -33,3 +36,38 @@ mybatis-plus.global-config.db-config.field-strategy=ignored
 mybatis.configuration.cache-enabled=false
 
 spring.jackson.time-zone=GMT+8
+
+spring.devtools.add-properties=false
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/quartz-cluster?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=123456
+
+spring.quartz.auto-startup=true
+spring.quartz.startup-delay=10s
+spring.quartz.job-store-type=jdbc
+spring.quartz.jdbc.initialize-schema=never
+#spring.quartz.properties.org.quartz.scheduler.instanceName=DefaultQuartzScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+#\u7EBF\u7A0B\u6C60\u7684\u5B9E\u73B0\u7C7B\uFF08\u4E00\u822C\u4F7F\u7528SimpleThreadPool\u5373\u53EF\u6EE1\u8DB3\u51E0\u4E4E\u6240\u6709\u7528\u6237\u7684\u9700\u6C42\uFF09
+spring.quartz.properties.org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
+#\u6307\u5B9A\u7EBF\u7A0B\u6570\uFF0C\u81F3\u5C11\u4E3A1\uFF08\u65E0\u9ED8\u8BA4\u503C\uFF09(\u4E00\u822C\u8BBE\u7F6E\u4E3A1-100\u76F4\u63A5\u7684\u6574\u6570\u5408\u9002)
+spring.quartz.properties.org.quartz.threadPool.threadCount = 20
+#\u8BBE\u7F6E\u7EBF\u7A0B\u7684\u4F18\u5148\u7EA7\uFF08\u6700\u5927\u4E3Ajava.lang.Thread.MAX_PRIORITY 10\uFF0C\u6700\u5C0F\u4E3AThread.MIN_PRIORITY 1\uFF0C\u9ED8\u8BA4\u4E3A5\uFF09
+spring.quartz.properties.org.quartz.threadPool.threadPriority = 5
+spring.quartz.properties.org.quartz.jobStore.misfireThreshold = 60000
+#\u6570\u636E\u4FDD\u5B58\u65B9\u5F0F\u4E3A\u6570\u636E\u5E93\u6301\u4E45\u5316
+spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+#\u6570\u636E\u5E93\u4EE3\u7406\u7C7B\uFF0C\u4E00\u822Corg.quartz.impl.jdbcjobstore.StdJDBCDelegate\u53EF\u4EE5\u6EE1\u8DB3\u5927\u90E8\u5206\u6570\u636E\u5E93
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+#JobDataMaps\u662F\u5426\u90FD\u4E3AString\u7C7B\u578B
+spring.quartz.properties.org.quartz.jobStore.useProperties = false
+#\u6570\u636E\u5E93\u522B\u540D \u968F\u4FBF\u53D6
+spring.quartz.properties.org.quartz.jobStore.dataSource = datasource
+#\u8868\u7684\u524D\u7F00\uFF0C\u9ED8\u8BA4QRTZ_
+spring.quartz.properties.org.quartz.jobStore.tablePrefix=QRTZ_
+#\u662F\u5426\u52A0\u5165\u96C6\u7FA4
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+#\u8C03\u5EA6\u5B9E\u4F8B\u5931\u6548\u7684\u68C0\u67E5\u65F6\u95F4\u95F4\u9694
+spring.quartz.properties.org.quartz.jobStore.clusterCheckinInterval = 15000
