--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <version>${mybatis-plus.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!--工具类-->
         <dependency>
             <groupId>cn.hutool</groupId>
